kubernetes/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
  namespace: game-2048
data:
  ports:
    - port: 80
      targetport: 80
      nodeport: 3008
  type: Nodeport
  selector:
    app.kubernetes.io/name: app-2048
